--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
 html,
 body {
   overscroll-behavior-y: contain;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 body,
@@ -17,7 +18,7 @@ body,
 }
 
 body {
-  background-color: #333;
+  background-color: #385ad8;
   display: flex;
   height: 100vh;
   margin: 0;
@@ -48,7 +49,6 @@ body {
   position: absolute;
   width: var(--cell-size);
   height: var(--cell-size);
-  background-color: red;
   top: calc(var(--y) * (var(--cell-size) + var(--cell-gap)) + var(--cell-gap));
   left: calc(var(--x) * (var(--cell-size) + var(--cell-gap)) + var(--cell-gap));
   font-weight: bold;
